; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/discord-rpc/src/extr_discord_register_win.c_Discord_Register.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/discord-rpc/src/extr_discord_register_win.c_Discord_Register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_UTF8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Discord_Register(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca [1024 x i32], align 16
  %6 = alloca i32*, align 8
  %7 = alloca [32 x i32], align 16
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32* null, i32** %6, align 8
  %9 = load i32, i32* @CP_UTF8, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds [32 x i32], [32 x i32]* %7, i64 0, i64 0
  %12 = call i32 @MultiByteToWideChar(i32 %9, i32 0, i8* %10, i32 -1, i32* %11, i32 32)
  %13 = load i8*, i8** %4, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %27

15:                                               ; preds = %2
  %16 = load i8*, i8** %4, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 0
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %15
  store i32 1024, i32* %8, align 4
  %22 = load i32, i32* @CP_UTF8, align 4
  %23 = load i8*, i8** %4, align 8
  %24 = getelementptr inbounds [1024 x i32], [1024 x i32]* %5, i64 0, i64 0
  %25 = call i32 @MultiByteToWideChar(i32 %22, i32 0, i8* %23, i32 -1, i32* %24, i32 1024)
  %26 = getelementptr inbounds [1024 x i32], [1024 x i32]* %5, i64 0, i64 0
  store i32* %26, i32** %6, align 8
  br label %27

27:                                               ; preds = %21, %15, %2
  %28 = getelementptr inbounds [32 x i32], [32 x i32]* %7, i64 0, i64 0
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @Discord_RegisterW(i32* %28, i32* %29)
  ret void
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32 @Discord_RegisterW(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
